syntax = "proto3";

package crystal.common.proto;

message GLBinding {
    string name = 1;
    uint32 binding = 2;
}

message OpenGL {
    string vertex_source = 1;
    string fragment_source = 2;
    repeated GLBinding uniforms = 3;
    repeated GLBinding textures = 4;
}

message Vulkan {
    bytes lib = 1;
}

message Metal {
    bytes lib = 1;
}

message Pipeline {
    string name = 1;
    OpenGL opengl = 2;
    Vulkan vulkan = 3;
    Metal metal = 4;
}

message Library {
    string version = 1;
    repeated Pipeline pipelines = 2;
}
